fix: set align-items for sign up

--- a/styles/login/responsive.css
+++ b/styles/login/responsive.css
@@ -80,7 +80,7 @@
         padding: 80px 0;
         display: flex;
         justify-content: center;
-        align-items: center;
+        align-items: flex-end;
         gap: 35px;
     }
 
